# smartmark

./: .gitignore  Cargo.toml  README.md  config.toml  test.toml
src/: main.rs  test.toml
src/cli/: mod.rs
src/config/: mod.rs
src/utils/: config.rs  duckduck.rs  github.rs  google.rs  mod.rs  protondb.rs  rustdocs.rs
